test/parser/Queries/syntax_errors/fail_K-WhereExpr-8.xq
( eq :*********** where **** let ************ ne * eq ************ $ ***************:): Test: K-WhereExpr-8          eq   let   eq            for   ne    let        :)
foo(:  by: FransEnglich        $      ne    $            let   let     :)(: Date: 2006-10-05T18:29:37+02:00             let           let  :) eq 
( let : Purpose: A for expression binding to ne   $ one single value, combined with  negative where clause. foo:)
(:************ for ** eq ******************* let ************ ne ********:)
(for $i in where  1  for where ( eq 1, current-time())[1]treat as xs:integer let  eq1return i)eq 1